# resync

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon  deez  dev  test.sublime-workspace
binal/: Cargo.toml
binal-database/: Cargo.toml
binal-database-macros/: Cargo.toml
binal-database-macros/src/: lib.rs
binal-database/src/: database.rs  error.rs  filestore.rs  ir.rs  lib.rs  object.rs  sqlite.rs  traits.rs
binal-ir/: Cargo.toml
binal-ir/src/: lib.rs
binal-project/: Cargo.toml
binal-project/src/: ir.rs  lib.rs  project.rs
binal-server/: Cargo.toml
binal-server/src/: lib.rs
binal-sync/: Cargo.toml
binal-sync/doc/: protocol.md
binal-sync/script/: binaryninja.py
binal-sync/src/: main.rs  net.rs  project.rs
binal/src/: main.rs  server.rs
doc/: protocol.md
plugin/: binaryninja.py
plugins/: binaryninja.py  test.py
script/: binaryninja.py
src/: .net.rs.rustfmt  analysis.rs  app.rs  buffer.rs  client.rs  component.rs  components.rs  context.rs  database.rs  error.rs  filemap.rs  ir.rs  ir.zig  lib.rs  lifter.rs  main.rs  menu.rs  menus.rs  net.rs  notify_event_unwrapper.rs  parser.rs  project.rs  renderable.rs  server.rs  source.rs  ui.rs  x86_64.rs
src/app/: app.rs  merge.rs  switch.rs
src/component/: editable_text.rs  list.rs  merge.rs  merge_view.rs  object_display.rs  project.rs  project_display.rs  selectable_list.rs  switch.rs
src/components/: menus.rs  path.rs
src/components/menus/: project.rs
src/renderable/: editable_text.rs  list.rs  object_display.rs  project.rs
src/ui/: editable_text.rs  menu.rs  merge_view.rs  object_display.rs  project_view.rs
