[package]
name = "binal"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
env_logger = "0.11.6"
log = "0.4.22"
rfd = "0.15.2"
serde = { version = "1.0.204", features = ["derive"]}
serde_json = "1.0.122"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
