[package]
name = "binal-database"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.204"
tokio = { version = "1.38.0", features = ["full"] }
bitcode = { version = "0.6.3", features = ["serde"] }
sqlx = { version = "0.7.4", features = ["sqlite"] }

binal-database-macros = { path = "../binal-database-macros" }
