[package]
name = "binal-database"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.204"
tokio = { version = "1.38.0", features = ["full"] }
bitcode = { version = "0.6.3", features = ["serde"] }
rusqlite = { version = "0.32.0", features = [ "bundled"] }

binal-database-macros = { path = "../binal-database-macros" }
