[package]
name = "binal-database"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
bitcode = { version = "0.6.3", features = ["serde"] }
rusqlite = { version = "0.32.0", features = [ "bundled"] }
