[package]
name = "binal-ir"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.122"
serde = { version = "1.0.204", features = ["derive"] }

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
